Updated to language level java21